--- a/src/main/resources/templates/pages/status_detail.html
+++ b/src/main/resources/templates/pages/status_detail.html
@@ -368,11 +368,11 @@
           },
         },
         columns : [
-          {data : "user_nm"},
-          {data : "user_email"},
-          {data : "user_rank"},
-          {data : "corp_nm"},
-          {data : "dept_nm"},
+          {data : "userNm"},
+          {data : "userEmail"},
+          {data : "userRank"},
+          {data : "corpNm"},
+          {data : "deptNm"},
       ],
 
       });
